--- a/static/css/examples.css
+++ b/static/css/examples.css
@@ -11,17 +11,17 @@ img {vertical-align:bottom;}
 .superbox_list2{}
 .wrapper_content{height: 100%;}
 .superbox ul{width: 100%;height: 100%;padding: 0;margin: 0; }
-.case_mark{position: absolute;left: 0.5px;top: -0.5px; width: 191px;height: 192px; background: #EF4C4C;color: #fff; z-index: 2;opacity: 0;}
+.case_mark{position: absolute;left: 0px;top: 0px; width: 191px;height: 192px; background: #EF4C4C;color: #fff; z-index: 2;opacity: 0;}
 .case_mark span{display: block;width: 100%;text-align: center;line-height: 30px;padding: 56px 0 0 0 ;}
 .case_mark span:nth-child(2){font-size: 12px;padding: 0;}
 .superbox-list {float:left;width:20%;position: relative;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;border-left: 1px solid #e9e9e9;
     border-top: 1px solid #e9e9e9;}
 
 .superbox-img {cursor:pointer;height: 192px;width: 192px;}
-.superbox-show {position:absolute;left:0;top: 484px;width:100%;float:left;border:1px solid #c7c7c7;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;height: 0px;background: #ff6666;z-index: 5;display: none;box-shadow: 0px 10px 10px #ff2222 inset;}
+.superbox-show {position:absolute;left:0;top: 484px;width:100%;float:left;border:1px solid #c7c7c7;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;height: 0px;background: #5d5d5d;z-index: 5;display: none;box-shadow: 0px 10px 10px #525252 inset;}
 .show_block{width: 960px;height: 100%;margin:0 auto;display:none;position: relative;}
-.con{position: absolute;top: 45%;width: 60px;height: 60px;z-index: 2;cursor: pointer;border-radius: 30px;background: #fb4c42;}
-.con:hover{background: #ff8181;}
+.con{position: absolute;top: 45%;width: 60px;height: 60px;z-index: 2;cursor: pointer;border-radius: 30px;background: #464646;}
+.con:hover{background: #6f6f6f;}
 .con a{display:block;width:36px;height:36px;margin: 0 auto;margin-top: 12px;}
 .pre{left: -20%;}
 .pre a{background: url(../images/sorrow_l.png);background-size: 100% 100%; }
@@ -37,7 +37,7 @@ img {vertical-align:bottom;}
 .nextpage a{background: url(../images/sorrow_right.png);background-size: 100% 100%;}
 
 .show_left{width:80%;height: 100%;float: left;position: relative;}
-.show_imgs{width: 97%;height: 90%;overflow: hidden;margin: 25px 20px 25px 0;box-shadow: 0px 0px 2px 4px #fb4c42;}
+.show_imgs{width: 97%;height: 90%;overflow: hidden;margin: 25px 20px 25px 0;box-shadow: 0px 0px 2px 4px #525252;}
 .show_imgs ul{width: 500%;height: 100%;padding: 0;margin: 0;}
 .show_imgs ul li{width: 20%;height: 100%;float: left;}
 .show_imgs ul li img{width: 100%;height: 100%;}
@@ -54,7 +54,8 @@ img {vertical-align:bottom;}
 .sorrow_right a{background: url(../images/sorrow_right.png);background-size: 100% 100%;}
 
 .show_right{width:20%;height:96%;float: left;position: relative;margin-top: 20px;}
-.show_right h4{margin-top: 40px;}
+.show_right h4{margin-top: 20px;font-size: 20px;padding:30px 0 0 0;}
+.show_right h5{font-size: 16px;padding:20px 0;}
 .show_right h4,.show_right h5{color: #fff;}
 .show_right .color_block{height: 90px;position: absolute; bottom: 8px;}
 .show_right p{font-size: 13px;color: #fff;line-height: 20px;}
