--- a/static/css/examples.css
+++ b/static/css/examples.css
@@ -5,19 +5,17 @@ img {vertical-align:bottom;}
 .examples_page{position: absolute;left: 0;top: 70px;width: 100%;height: 950px;background: #e9e9e9;overflow: hidden;}
 .wrapper {max-width:960px;margin:0 auto;height: 968px;position: relative;padding-top: 100px;padding-bottom: 100px;overflow: hidden}
 /* SuperBox */
-.superbox{ width: 100%;height: 386px;}
+.superbox{ width: 100%;height: 384px;}
 .superbox_lists{width: 960px;height: 100%;float: left;}
 .superbox_list1{}
 .superbox_list2{}
 .wrapper_content{height: 100%;}
 .superbox ul{width: 100%;height: 100%;padding: 0;margin: 0; }
-.case_mark{position: absolute;left: 0px;top: 0px; width: 191px;height: 192px; background: #EF4C4C;color: #fff; z-index: 2;opacity: 0;}
+.case_mark{position: absolute;left: 0px;top: 0px; width: 191px;height: 191px; background: #EF4C4C;color: #fff; z-index: 2;opacity: 0;}
 .case_mark span{display: block;width: 100%;text-align: center;line-height: 30px;padding: 56px 0 0 0 ;}
 .case_mark span:nth-child(2){font-size: 12px;padding: 0;}
-.superbox-list {float:left;width:20%;position: relative;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;border-left: 1px solid #e9e9e9;
-    border-top: 1px solid #e9e9e9;}
-
-.superbox-img {cursor:pointer;height: 192px;width: 192px;}
+.superbox-list {float:left;width:191px;height:191px;position: relative;margin-right: 1px;margin-bottom: 1px;}
+.superbox-img {cursor:pointer;height: 191px;width: 191px;}
 .superbox-show {position:absolute;left:0;top: 484px;width:100%;float:left;border:1px solid #c7c7c7;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;height: 0px;background: #5d5d5d;z-index: 5;display: none;box-shadow: 0px 10px 10px #525252 inset;}
 .show_block{width: 960px;height: 100%;margin:0 auto;display:none;position: relative;}
 .con{position: absolute;top: 45%;width: 60px;height: 60px;z-index: 2;cursor: pointer;border-radius: 30px;background: #464646;}
