--- a/static/css/examples.css
+++ b/static/css/examples.css
@@ -42,7 +42,7 @@ img {vertical-align:bottom;}
 .superbox-current-img {position: absolute;left: 0;top: 0;width:100%;height: 100%;z-index: 1;}
 .superbox-img:hover {opacity:0.8;}
 .sorrow{position: absolute;top: 48%;width: 30px;height: 30px;z-index: 2;background: #fff;cursor: pointer;}
-.sorrow:hover{background: #fb4c42;}
+.sorrow:hover{background: #464646;}
 .sorrow_left:hover a{background: url(../images/sorrow_l_act.png);background-size: 100% 100%;}
 .sorrow_right:hover a{background: url(../images/sorrow_r_act.png);background-size: 100% 100%;}
 .sorrow a{display:block;width:12px;height:19px;margin:5.5px 9px;}
